# cs3

./: CMakeLists.txt  CS3.csproj  Player.cs  Program.cs  README.md  ai_engine.py  cs3.sln  engine.h  main.cpp  setup_expanded.py  setup_local.py  setup_models.py  setup_project.py
.github/workflows/: build-windows.yml  build_windows.yml  cs3-final.yml  dotnet.yml
assets/levels/: level1.json
assets/weapons/: weapon1.json
include/: GameLoop.h  Level.h  MapManager.h  ResourceManager.h  UIManager.h  game.h
resources/models/: PG-150.mdl  arcticorange.mdl  arcticorangeT.mdl  bag.mdl  bigtree.mdl  bush.mdl  chick.mdl  conveyor1.mdl  conveyor2.mdl  conveyor3.mdl  conveyor_turn.mdl  dummyguerilla.mdl  feather.mdl  fern.mdl  grass.mdl  guerilla.mdl  head.mdl  hostage.mdl  lv_bottle.mdl  orange.mdl  oranget.mdl  p_ak47.mdl  p_aug.mdl  p_awp.mdl  p_c4.mdl  p_deagle.mdl  p_elite.mdl  p_famas.mdl  p_fiveseven.mdl  p_flashbang.mdl  p_g3sg1.mdl  p_galil.mdl  p_glock18.mdl  p_hegrenade.mdl  p_knife.mdl  p_m249.mdl  p_m3.mdl  p_m3super90.mdl  p_m4a1.mdl  p_mac10.mdl  (+121 more)
scripts/: enemy1.py  enemy2.py
src/: AssetLoader.cpp  AssetLoader.h  GameEngine.cpp  GameEngine.h  GameLoop.cpp  Level.cpp  MapManager.cpp  MapManager.h  PhysicsManager.cpp  PhysicsManager.h  Player.cpp  Player.h  ResourceManager.cpp  UI.cpp  UI.h  UIManager.cpp  Weapon.cpp  Weapon.h
